xây api headless

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "@google/genai": "^1.10.0",
-    "react-image-crop": "^11.0.6"
+    "react-image-crop": "^11.0.6",
+    "@vercel/node": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
